--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./public/images/ipicture.PNG" alt="vote app" class="img-fluid profolio-img" />
+            <img src="./public/images/ipicture.PNG" alt="ipicture" class="img-fluid profolio-img" />
             <p class="text-center introduction col-md-8 col-sm-12 mx-auto">A Picture-Sharing Website which supports create/edit/delete image, description and user comments.</p>
           </div>
           <div class="modal-footer">
@@ -200,7 +200,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./public/images/2.PNG"" alt="vote app" class="img-fluid profolio-img" />
+            <img src="./public/images/2.PNG"" alt="stock market" class="img-fluid profolio-img" />
             <p class="text-center introduction col-md-8 col-sm-12 mx-auto">Track stocks, users can customize their concerned stocks</p>
           </div>
           <div class="modal-footer">
@@ -223,7 +223,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./public/images/3.PNG"" alt="vote app" class="img-fluid profolio-img" />
+            <img src="./public/images/3.PNG"" alt="recipe box" class="img-fluid profolio-img" />
             <p class="text-center introduction col-md-8 col-sm-12 mx-auto">A recipe box support create/edit/delete recipes with names and ingredients</p>
           </div>
           <div class="modal-footer">
@@ -246,7 +246,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./public/images/4.PNG"" alt="vote app" class="img-fluid profolio-img" />
+            <img src="./public/images/4.PNG"" alt="game of life" class="img-fluid profolio-img" />
             <p class="text-center introduction col-md-8 col-sm-12 mx-auto">A simulator for Conway's Game of Life</p>
           </div>
           <div class="modal-footer">
