--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-md-12">
             <a data-toggle="modal" data-target="#ipictureModal">
-              <img src="./public/images/ipicture.PNG" alt="ipicture" class="img-fluid link profolio-img" />
+              <img src="./public/images/ipicture.png" alt="ipicture" class="img-fluid link profolio-img" />
             </a>
           </div>
         </div>
@@ -177,7 +177,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./public/images/ipicture.PNG" alt="ipicture" class="img-fluid profolio-img" />
+            <img src="./public/images/ipicture.png" alt="ipicture" class="img-fluid profolio-img" />
             <p class="text-center introduction col-md-8 col-sm-12 mx-auto">A Picture-Sharing Website which supports create/edit/delete image, description and user comments.</p>
           </div>
           <div class="modal-footer">
