--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="row">
           <div class="col-md-12">
             <a data-toggle="modal" data-target="#ipictureModal">
-              <img src="./public/images/ipicture.png" alt="ipicture" class="img-fluid link profolio-img" />
+              <img src="./public/images/1.png" alt="ipicture" class="img-fluid link profolio-img" />
             </a>
           </div>
         </div>
