--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./public/images/ipicture.png" alt="ipicture" class="img-fluid profolio-img" />
+            <img src="./public/images/1.png" alt="ipicture" class="img-fluid profolio-img" />
             <p class="text-center introduction col-md-8 col-sm-12 mx-auto">A Picture-Sharing Website which supports create/edit/delete image, description and user comments.</p>
           </div>
           <div class="modal-footer">
