fit redundant symbol

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </button>
           </div>
           <div class="modal-body">
-            <img src="./public/images/2.PNG"" alt="stock market" class="img-fluid profolio-img" />
+            <img src="./public/images/2.PNG" alt="stock market" class="img-fluid profolio-img" />
             <p class="text-center introduction col-md-8 col-sm-12 mx-auto">Track stocks, users can customize their concerned stocks</p>
           </div>
           <div class="modal-footer">
