fit scrollable.js path

--- a/index.html
+++ b/index.html
@@ -281,6 +281,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/9c20ef1628.js"></script>
-    <script type="text/javascript" src="scrollable.js"></script>
+    <script type="text/javascript" src="./public/scrollable.js"></script>
   </body>
 </html>
